Upgrade jOOQ module to JDK11.