@@ -12,9 +12,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<flyway.version>5.2.0</flyway.version>
-		<java.version>10</java.version>
-		<jooq.version>3.11.3</jooq.version>
+		<flyway.version>5.2.3</flyway.version>
+		<glassfish-jaxb.version>2.3.1</glassfish-jaxb.version>
+		<java.version>11</java.version>
+		<javax-annotation.version>1.3.2</javax-annotation.version>
+		<jooq.version>3.11.7</jooq.version>
 		<postgresql.version>42.2.4</postgresql.version>
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
 
@@ -25,6 +27,13 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>${javax-annotation.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -152,10 +161,6 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<compilerArgs>
-						<arg>--add-modules</arg>
-						<arg>java.xml.ws.annotation</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
